feat: написано ещё немного тестов для контроллера